--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
+    "normalize.css": "^8.0.1",
     "sequelize": "^6.25.5"
   }
 }
